--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "luxon": "^2.4.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue-toast-notification": "3.0"
+    "vue-toast-notification": "3.0",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
